--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div></div>
         <div></div>
         <div></div>
+        <div id= "extra"></div>
       </div>
       <div class="controls">
         <button class="btn">New Game</button>
