--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>INFO2180 - Tic-Tac-Toe - Lab 4</title>
     <link rel="stylesheet" href="tic-tac-toe.css" />
+    <script src="tic-tac-toe.js" defer></script>
   </head>
   <body>
     <h1>Tic <span>-Tac-</span> Toe</h1>
@@ -29,6 +30,5 @@
         <button id="reset-btn">New Game</button>
       </div>
     </div>
-    <script src="tic-tac-toe-v2.js"></script>
   </body>
 </html>
